--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <div class="quiz_progress">
             <div class="progress-container">
                 <span id="question_number">Question 1/3</span>
-                <div class="progress-bar" id="progress_bar"></div>
+                <div class="progress-bar" id="progress_bar">
+                    <div class="current-progress"></div>
+                </div>
             </div>
             <div class="score-container">
                 <span>Score</span>
@@ -27,12 +29,23 @@
         <div class="question-container">
             <h2 id="question_text">Which of the following is the correct way to comment in HTML?</h2>
             <div class="options">
-                <button class="option" data-answer="incorrect">// Comment</button>
-                <button class="option" data-answer="correct"><!-- Comment --></button>
-                <button class="option" data-answer="incorrect">/* Comment */</button>
-                <button class="option" data-answer="incorrect"><! Comment></button>
+                <div class="option" data-answer="incorrect">
+                    <div class="option_number">A.</div>
+                    <div class="option_text">// Comment</div>
+                </div>
+                <div class="option" data-answer="correct">
+                    <div class="option_number">B.</div>
+                    <div class="option_text"><!-- Comment --></div>
+                </div>
+                <div class="option" data-answer="incorrect">
+                    <div class="option_number">C.</div>
+                    <div class="option_text">/* Comment */</div>
+                </div>
+                <div class="option" data-answer="incorrect">
+                    <div class="option_number">D.</div>
+                    <div class="option_text"><! Comment></div>
+                </div>
             </div>
-            <div id="answer_feedback"></div>
         </div>
     </div>
 
